--- a/finimalism10.11-black.css
+++ b/finimalism10.11-black.css
@@ -404,9 +404,12 @@
 .alphaPickerButton-tv:focus,
 .emby-select-tv-withcolor:focus,
 .emby-checkbox:checked + span + .checkboxOutline,
-.itemProgressBarForeground,
-.textActionButton:hover {
+.itemProgressBarForeground {
 	background-color: var(--accentBlack) !important;
+}
+
+.textActionButton:hover {
+	color: var(--accentBlack) !important;
 }
 
 .progressring-spiner,
